[package]
name          = "phoenix_cmc"
version       = "0.1.0"
authors       = ["Deven T. Corzine <deven@ties.org>"]
edition       = "2021"
description   = "Conferencing system server supporting real-time communication between users, currently using a text-based user interface over the standard TELNET protocol, so no special client program is necessary for users."
documentation = "https://docs.rs/phoenix_cmc"
readme        = "README.md"
homepage      = "https://phoenix-cmc.org/"
repository    = "https://github.com/deven/phoenix/"
license       = "MIT"
keywords      = ["cmc", "chat", "conferencing", "communication", "im", "instant message"]

[dependencies]
bytes              = "1.3.0"
structopt          = "0.3.26"
tokio              = { version = "1.23.0", features = ["full"] }
tracing            = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
