[package]
name = "phoenix-cmc"
version = "2.0.0"
edition = "2021"
rust-version  = "1.80"
authors = ["Phoenix CMC Contributors"]
license = "MIT"
description = "Phoenix Computer-Mediated Communication system"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
indexmap = "2"
dashmap = "5"
anyhow = "1"
thiserror = "1"
bytes = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
nix = { version = "0.27", features = ["user"] }
argon2 = "0.5"
rand = "0.8"
async-trait = "0.1"
lazy_static = "1.5.0"

[profile.release]
lto = true
codegen-units = 1
