[package]
name          = "phoenix-cmc"
version       = "2.0.0"
edition       = "2024"
rust-version  = "1.85"
authors       = ["Deven T. Corzine <deven@ties.org>"]
description   = "Phoenix Computer-Mediated Communication system"
documentation = "https://docs.rs/phoenix-cmc"
readme        = "README.md"
homepage      = "https://phoenix-cmc.org/"
repository    = "https://github.com/deven/phoenix/"
license       = "MIT"
keywords      = ["cmc", "chat", "conferencing", "communication", "im", "instant message"]

[dependencies]
anyhow          = "1.0.100"
arc-swap        = "1.7.1"
argon2          = "0.5.3"
async-backtrace = "0.2.7"
bytes           = "1.10.1"
bytestring      = "1.5.0"
chrono          = "0.4.42"
env_logger      = "0.11.8"
im              = "15.1.0"
log             = "0.4.28"
nix             = { version = "0.30.1", features = ["user"] }
pwhash          = "1.0.0"
rand            = "0.9.2"
serde           = { version = "1.0.228", features = ["derive"] }
subtle          = "2.6.1"
#textwrap       = "0.16.1"
thiserror       = "2.0.16"
tokio           = { version = "1.47.1", features = ["full"] }
unicase         = "2.8.1"

[dev-dependencies]
static_assertions = "1.1.0"

[profile.release]
lto           = true
codegen-units = 1

[features]
default      = ["guest-access"]
guest-access = []
